fix bug alignment group

--- a/assembl/static/css/layout/_groupContainer.scss
+++ b/assembl/static/css/layout/_groupContainer.scss
@@ -12,7 +12,7 @@
 
 .groupContent {
   display: inline-block;
-  height: inherit;
+  height: 100%;
   border-right: 5px solid $white;
   border-left: 3px solid $gray1;
   white-space: normal;
